# Satchel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  mcp.rs
apps/desktop/src-tauri/src/commands/: ai.rs  export.rs  index.rs  ingest.rs  library.rs  mod.rs  secrets.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src/ai/: claudeCodeProvider.ts  registry.ts
apps/desktop/src/components/: ArtifactThumbnail.tsx  ArtifactView.tsx  ChatDrawer.tsx  NoteEditor.tsx  ProjectGrid.tsx  Settings.tsx  Sidebar.tsx  VersionHistory.tsx
apps/desktop/src/lib/: diffLines.ts  sniffContent.ts  tauri.ts
apps/desktop/src/renderers/: registry.ts
apps/desktop/src/state/: apiKeys.ts  dnd.ts  library.ts  settings.ts  ui.ts
docs/: adding-a-renderer.md  adding-an-ai-provider.md  architecture.md  mcp-server.md
