[package]
name = "satchel"
version = "0.1.0"
description = "Satchel - a local-first workspace for AI-generated artifacts"
authors = ["mdschoff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "satchel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
rmcp = { version = "2.2.0", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session", "schemars"] }
schemars = { version = "1.2.1", features = ["derive"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["net", "rt", "macros", "sync"] }
tracing = "0.1.44"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "4", features = ["apple-native-keyring-store"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "4", features = ["windows-native-keyring-store"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4", features = ["dbus-secret-service-keyring-store"] }

